Fix wrong assertion. (Bug 706303, r=sstangl)